--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="googlebot" content="notranslate" />
+    <meta name="Description" content="Web and System">
     <title>ClientCrash</title>
+    <link rel="stylesheet" href="css/index.css">
+    <meta name="theme-color" content="#E4AD0D">
 </head>
 <body>
-    ClientCrash
+    <div class="mdiv">
+        <h1>ClientCrash</h1>
+        <small>clientcrash.com</small>
+    
+        <div id="mlogo">CC</div>
+
+    </div>
+    <div class="footer">
+        ClientCrash.com 2022
+    </div>
+
 </body>
 </html>
