updated font url

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>ClientCrash</title>
     <link rel="stylesheet" href="css/index.css">
     <meta name="theme-color" content="#E4AD0D">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div class="mdiv">
