--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>ClientCrash</title>
     <link rel="stylesheet" href="css/index.css">
     <meta name="theme-color" content="#E4AD0D">
+    <link rel="shortcut icon" href="logo_b1.png" type="image/x-icon">
 </head>
 <body>
     <div class="mdiv">
