added apple touch icon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/index.css">
     <meta name="theme-color" content="#E4AD0D">
     <link rel="shortcut icon" href="logo_b1.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="logo_b1.png">
 </head>
 <body>
     <div class="mdiv">
