--- a/chess_stats/index.html
+++ b/chess_stats/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Chess Stats</h1>
 
-    <input type="search" name="pn" id="pn"> <br/>
+    <input type="search" name="pn" id="pn"> <br/> <br/>
     <button onclick="{ol()}">Search</button>
 
     <div class="statsd">
