--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="googlebot" content="notranslate" />
-    <meta name="Description" content="Web and System">
+    <meta name="Description" content="Developer">
     <title>ClientCrash</title>
     <link rel="stylesheet" href="css/index.css">
     <meta name="theme-color" content="#E4AD0D">
